Fix vertical alignment of the Commit field value.
The CSS for the span tags were too general, and were causing the value
for the Commit field to be too low. We now limit to the particular span
tags we care about.

--- a/reviewboard/static/rb/css/reviews.less
+++ b/reviewboard/static/rb/css/reviews.less
@@ -307,7 +307,7 @@
         vertical-align: top;
       }
 
-      th, td span {
+      th, td .field {
         padding-top: 3px;
       }
 
